# playwright-demo-py

./: .gitignore  README.md  conftest.py  history.json  index.html  playwright.config.py  pyproject.toml  requirements.txt
.github/scripts/: generate_dashboard.py
.github/workflows/: publish-report.yml  run-tests.yml
downloaded-reports/reports/: index.html  test-results.json
pages/: __init__.py  base_page.py  home_page.py  login_page.py
tests/: test_login.py
