[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

markers = [
    "smoke: quick sanity checks — run these first",
    "regression: full regression suite",
    "auth: authentication-related tests",
    "checkout: checkout flow tests",
]

addopts = """
  --browser=chromium
  --numprocesses=1
  --screenshot=only-on-failure
  --video=retain-on-failure
  --tracing=retain-on-failure
  --output=test-artifacts
"""

[project]
name = "playwright-demo-py"
version = "0.1.0"
requires-python = ">=3.11"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.commitizen.customize]
bump_pattern = "^(feat|fix|refactor|perf)"
schema_pattern = "(feat|fix|chore|docs|refactor|test|ci|style|perf)(\\(.+\\))?!?:(\\s.*)"
message_template = "{{change_type}}{{scope}}: {{message}}"
example = "feat: add login page tests"
schema = "<type>(<optional scope>): <description>"
info = """
Conventional Commit Types:
─────────────────────────
feat:      new feature
fix:       bug fix
chore:     maintenance, deps, config
docs:      documentation only
refactor:  restructure, no behavior change
test:      adding or updating tests
ci:        GitHub Actions / CI config
style:     formatting, no logic change
perf:      performance improvement

Example: feat(login): add invalid password test
"""